--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,20 @@ main>* {
     margin: 0.5rem 0;
 }
 
+.title-reward {
+    opacity: 0;
+    transform: scale(0);
+    text-align: center;
+    font-size: 1.5rem;
+    letter-spacing: 0.4rem;
+}
+
+.title-reward-transition {
+    opacity: 1;
+    transform: scale(1);
+    transition: 2s;
+}
+
 .textbox {
     font-size: 2rem;
     text-align: center;
@@ -75,6 +89,8 @@ main>* {
 .masu-cell-number {
     position: absolute;
     font-size: 2.5rem;
+    width: 100%;
+    height: 100%;
 }
 
 .masu-cell-koho {
@@ -87,8 +103,6 @@ main>* {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 100%;
 }
 
 .color-koho {
@@ -111,4 +125,92 @@ main>* {
 
 .hidden {
     visibility: hidden;
+}
+
+/* ポップアップ */
+
+.popup-fill {
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    overflow: auto;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 9999;
+    background-color: rgba(0, 0, 0, 0.7);
+    opacity: 1;
+}
+
+.popup-enter-active,
+.popup-leave-active {
+    transition: opacity .1s;
+}
+
+.popup-enter,
+.popup-leave-to {
+    opacity: 0;
+}
+
+.popup-window {
+    position: relative;
+    align-self: center;
+    width: 100%;
+    height: auto;
+    margin: 0 calc(50% - 10rem);
+    padding: 2.5rem;
+    background-color: white;
+    border-radius: 0.2rem;
+    outline: none;
+    text-align: center;
+}
+
+.popup-text {
+    /* position: absolute; */
+    font-size: 1.5rem;
+}
+
+.popup-close-box {
+    position: absolute;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    top: 0;
+    right: 0;
+    width: 2.5rem;
+    height: 2.5rem;
+    background-color: transparent;
+    transition: background-color 0.1s;
+    border-top-right-radius: 0.2rem;
+}
+
+.popup-close {
+    font-size: 1.5rem;
+    text-align: center;
+    user-select: none;
+}
+
+.popup-close-box:hover,
+.popup-prev:hover,
+.popup-next:hover {
+    background-color: orangered;
+}
+
+.popup-button-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+}
+
+.popup-button-number {
+    aspect-ratio: 1;
+    margin: 0.5rem;
+    font-size: 2rem;
+}
+
+.popup-button-delete {
+    font-size: 1.5rem;
+    margin: 0.5rem auto;
+    padding: 0.25rem 1.5rem;
 }
