--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ html {
 body {
     background-color: #fff;
     min-height: 100vh;
-    padding: 0 2rem;
+    padding: 0 1rem;
 }
 
 a {
@@ -49,14 +49,15 @@ main>* {
 }
 
 .title-reward {
+    display: none;
     opacity: 0;
     transform: scale(0);
     text-align: center;
     font-size: 1.5rem;
-    letter-spacing: 0.4rem;
 }
 
 .title-reward-transition {
+    display: block;
     opacity: 1;
     transform: scale(1);
     transition: 2s;
@@ -74,11 +75,11 @@ main>* {
 }
 
 .masu-frame {
-    border: solid 4px #000;
+    border: solid 2px #000;
 }
 
 .masu-block {
-    border: solid 3px #000;
+    border: solid 1px #000;
 }
 
 .masu-cell {
@@ -94,7 +95,7 @@ main>* {
 }
 
 .masu-cell-koho {
-    font-size: 0.5rem;
+    font-size: 0.3rem;
     opacity: 0.5;
     aspect-ratio: 1;
 }
