--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,10 @@
 html {
     background-color: #eee;
     padding: 0 calc(50% - 18rem);
+    user-select: none;
+    -ms-user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
 }
 
 body {
@@ -49,18 +53,8 @@ main>* {
 }
 
 .title-reward {
-    display: none;
-    opacity: 0;
-    transform: scale(0);
+    font-size: 1.25rem;
     text-align: center;
-    font-size: 1.5rem;
-}
-
-.title-reward-transition {
-    display: block;
-    opacity: 1;
-    transform: scale(1);
-    transition: 2s;
 }
 
 .textbox {
@@ -125,6 +119,29 @@ main>* {
     margin-right: auto;
 }
 
+.keypad-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    column-gap: 0.5rem;
+}
+
+.keypad-button-number {
+    font-size: 1.25rem;
+    margin: 0.25rem auto;
+    /* aspect-ratio: 1;
+    margin: 0.5rem;
+    font-size: 2rem; */
+    width: 100%;
+}
+
+.keypad-button-delete {
+    font-size: 1.25rem;
+    margin: 0.5rem auto;
+    /* padding: 0.25rem auto; */
+    width: 100%;
+}
+
 .color-koho {
     background-color: silver;
 }
@@ -163,9 +180,11 @@ main>* {
     opacity: 1;
 }
 
-.popup-enter-active,
+.popup-enter-active {
+    transition: opacity 1.0s;
+}
 .popup-leave-active {
-    transition: opacity .1s;
+    transition: opacity 0.1s;
 }
 
 .popup-enter,
@@ -179,7 +198,7 @@ main>* {
     width: 100%;
     height: auto;
     margin: 0 calc(50% - 10rem);
-    padding: 2.5rem;
+    padding: 2.5rem 1.0rem;
     background-color: white;
     border-radius: 0.2rem;
     outline: none;
@@ -215,22 +234,4 @@ main>* {
 .popup-prev:hover,
 .popup-next:hover {
     background-color: orangered;
-}
-
-.popup-button-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-}
-
-.popup-button-number {
-    aspect-ratio: 1;
-    margin: 0.5rem;
-    font-size: 2rem;
-}
-
-.popup-button-delete {
-    font-size: 1.5rem;
-    margin: 0.5rem auto;
-    padding: 0.25rem 1.5rem;
 }
