--- a/css/style.css
+++ b/css/style.css
@@ -208,7 +208,7 @@ main>* {
     width: 100%;
     height: auto;
     margin: 0 calc(50% - 10rem);
-    padding: 2.5rem 1.0rem;
+    padding: 2.5rem 0.5rem 1.0rem;
     background-color: white;
     border-radius: 0.2rem;
     outline: none;
